container/kubernetes/workload-resources/k8s-ingress-nginx-yaml.yaml
# https://kubernetes.github.io/ingress-nginx/deploy/

#### install ingress nginx
# https://github.com/kubernetes/ingress-nginx
# https://blog.csdn.net/zhangge3663/article/details/107582194

# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.0/deploy/static/provider/baremetal/deploy.yaml
# kubectl get pods --namespace=ingress-nginx

# ingress 暴露 NodePort
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/baremetal/deploy.yaml

# kubectl create deployment demo --image=httpd:2.4.53 --port=80
# kubectl expose deployment demo
# kubectl create ingress demo-localhost --class=nginx --rule=demo.localdev.me/*=demo:80
# kubectl port-forward --namespace=ingress-nginx service/ingress-nginx-controller 8080:80
# curl http://demo.localdev.me:8080/

# kubectl get service ingress-nginx-controller --namespace=ingress-nginx
# kubectl create ingress demo --class=nginx --rule="www.demo.io/*=demo:80"
# 等同 kubectl create ingress demo --class=nginx --rule=www.demo.io/*=demo:80
# curl http://www.demo.io/

#### Basic usage - host based routing
# https://kubernetes.github.io/ingress-nginx/user-guide/basic-usage/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: demo.foo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
